9708 loader: libstand warning: pointer targets differ in signedness Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>